--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-md-6">
       <img
-       src="https://na78.salesforce.com/sfc/p/1N000002LAnf/a/1N000000IWp8/DpjMIK_m3bQaJPBgdYXCRYeGVe5ErMrxZDM0v_Xi3Z0"
+       src="source/img/S82036.jpg"
        alt="ULTRABOOST ALL TERRAIN SHOES"
        class="image-responsive"
       />
