--- a/single.html
+++ b/single.html
@@ -605,8 +605,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					method: 'GET',
 					data: {cmId:params["cmId"],activityStatus:"Sent"},
 					dataType: 'jsonp',
-					'Accept': 'application/x-javascript',
-					'contentType': 'application/x-javascript',
+					'Accept': 'application/json',
+					'contentType': 'application/json',
 					success: function(data){
 						window.location.replace('/index.html');
 					}
