--- a/single.html
+++ b/single.html
@@ -603,7 +603,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				$.ajax({
 					url: 'https://hackday-developer-edition.na78.force.com/services/apexrest/twillio',
 					method: 'GET',
-					data: {cmId:params["cmId"],activityStatus:"Sent"},
+					data: {action:'trackActivity',cmId:params["cmId"],activityStatus:"Sent"},
 					dataType: 'json',
 					'Accept': '*',
 					'Access-Control-Allow-Origin': '*',
