modifying cart add the opportunuty only once clicked 2

--- a/single.html
+++ b/single.html
@@ -601,7 +601,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			$.ajax({
 				url: 'https://hackday-developer-edition.na78.force.com/services/apexrest/twillio',
 				method: 'GET',
-				data: {action:'clicked',cmId:params["cmId"]},
+				data: {action:'clicked',cmId:params["cmId"],activityStatus:"Clicked"},
 				dataType: 'json',
 				'Accept': '*',
 				'Access-Control-Allow-Origin': '*',
