--- a/single.html
+++ b/single.html
@@ -232,7 +232,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img id="example" src="images/si1.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="col-md-8 agileinfo_single_right">
-				<h2>KHARAMORRA Khakra - Hariyali</h2>
+				<h2>13-inch MacBook Pro</h2>
 					<div class="rating1">
 						<span class="starRating">
 							<input id="rating5" type="radio" name="rating" value="5">
@@ -249,14 +249,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="w3agile_description">
 						<h4>Description :</h4>
-						<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-							officia deserunt mollit anim id est laborum.Duis aute irure dolor in
-							reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-							pariatur.</p>
+						<p>2.3GHz dual-core 7th-generation Intel Core i5 processor
+Turbo Boost up to 3.6GHz
+8GB 2133MHz LPDDR3 memory
+128GB SSD storage1
+Intel Iris Plus Graphics 640
+Two Thunderbolt 3 ports</p>
 					</div>
 					<div class="snipcart-item block">
 						<div class="snipcart-thumb agileinfo_single_right_snipcart">
-							<h4 class="m-sing">$21.00 <span>$25.00</span></h4>
+							<h4 class="m-sing">$1,199.00 <span>$1,299.00</span></h4>
 						</div>
 						<div class="snipcart-details agileinfo_single_right_details">
 							<form action="#" method="post">
@@ -264,9 +266,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<input type="hidden" name="cmd" value="_cart">
 									<input type="hidden" name="add" value="1">
 									<input type="hidden" name="business" value=" ">
-									<input type="hidden" name="item_name" value="pulao basmati rice">
-									<input type="hidden" name="amount" value="21.00">
-									<input type="hidden" name="discount_amount" value="1.00">
+									<input type="hidden" name="item_name" value="13-inch MacBook Pro">
+									<input type="hidden" name="amount" value="1199.00">
+									<input type="hidden" name="discount_amount" value="100.00">
 									<input type="hidden" name="currency_code" value="USD">
 									<input type="hidden" name="return" value=" ">
 									<input type="hidden" name="cancel_return" value=" ">
