changing product to mac 7

--- a/single.html
+++ b/single.html
@@ -355,8 +355,8 @@ Two Thunderbolt 3 ports</p>
 									<figure>
 										<div class="snipcart-item block">
 											<div class="snipcart-thumb">
-												<a href="products.html"><img title=" " alt=" " src="images/15.png"></a>
-												<p>Navaratan-dal</p>
+												<a href="products.html"><img title=" " alt=" " src="images/galaxy.jpg"></a>
+												<p>Galaxy smart phone</p>
 												<div class="stars">
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
@@ -364,7 +364,7 @@ Two Thunderbolt 3 ports</p>
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
 													<i class="fa fa-star gray-star" aria-hidden="true"></i>
 												</div>
-													<h4>$30.99 <span>$45.00</span></h4>
+													<h4>$800 <span>$855.00</span></h4>
 											</div>
 											<div class="snipcart-details top_brand_home_details">
 												<form action="#" method="post">
@@ -401,8 +401,8 @@ Two Thunderbolt 3 ports</p>
 									<figure>
 										<div class="snipcart-item block">
 											<div class="snipcart-thumb">
-												<a href="products.html"><img src="images/16.png" alt=" " class="img-responsive"></a>
-												<p>White-peasmatar</p>
+												<a href="products.html"><img src="images/headphones.jpg" alt=" " class="img-responsive"></a>
+												<p>Headphone</p>
 												<div class="stars">
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
@@ -444,8 +444,8 @@ Two Thunderbolt 3 ports</p>
 									<figure>
 										<div class="snipcart-item block">
 											<div class="snipcart-thumb">
-												<a href="products.html"><img title=" " alt=" " src="images/17.png"></a>
-												<p>Channa-dal</p>
+												<a href="products.html"><img title=" " alt=" " src="images/iphone.jpg"></a>
+												<p>iPhone X</p>
 												<div class="stars">
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
@@ -453,7 +453,7 @@ Two Thunderbolt 3 ports</p>
 													<i class="fa fa-star blue-star" aria-hidden="true"></i>
 													<i class="fa fa-star gray-star" aria-hidden="true"></i>
 												</div>
-													<h4>$35.99 <span>$55.00</span></h4>
+													<h4>$999 <span>$950.00</span></h4>
 											</div>
 											<div class="snipcart-details top_brand_home_details">
 												<form action="#" method="post">
