changing product to mac 9

--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<img src="images/11.jpg" alt="" />
 				<!--Slider Description example-->
 				<div class="slide-desc">
-					<h3>Buy Rice Products Are Now On Line With Us</h3>
+					<h3>We have the best TV, We mean it</h3>
 				</div>
 			</li>
 			<li>
 				<img src="images/22.jpg" alt="" />
 				  <div class="slide-desc">
-					<h3>Whole Spices Products Are Now On Line With Us</h3>
+					<h3>“We know electronics. We have the best electronics.”</h3>
 				</div>
 			</li>
 
